--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.64.1",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
+    "node-cron": "^4.2.1",
     "sequelize": "^6.37.7",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
